Refactor to separate the provider-databuffer-consumer connections

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,12 +21,17 @@ pubsubclient = PubSubClient@2.8
 
 [env]
 lib_ldf_mode = chain
-build_flags = -include user_include.h
+build_flags =
+  -include user_include.h
+  '-DSTFBUFFER_0=STF_BUFFER1(systemBuffer, 32, SystemProvider)'
 
 [env:wemos_d1_mini32]
 platform = ${com.esp32_platform}
 framework = arduino
 board = wemos_d1_mini32
+build_flags =
+  ${env.build_flags}
+  '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, BTProvider)'
 monitor_speed = 115200
 upload_speed = 345600
 
