--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ pubsubclient = PubSubClient@2.8
 lib_ldf_mode = chain
 build_flags =
   -include user_include.h
-  '-DSTFBUFFER_0=STF_BUFFER1(systemBuffer, 32, SystemProvider)'
+  '-DSTFBUFFER_0=STF_BUFFER1(systemBuffer, 32, Main, SystemProvider)'
 
 [env:wemos_d1_mini32]
 platform = ${com.esp32_platform}
@@ -31,7 +31,7 @@ framework = arduino
 board = wemos_d1_mini32
 build_flags =
   ${env.build_flags}
-  '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, BTProvider)'
+  '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, Main, BTProvider)'
 monitor_speed = 115200
 upload_speed = 345600
 
