--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 [platformio]
 
 [com]
-esp32_platform = espressif32
+esp32_platform = espressif32@3.3.1
 
 [libraries]
-ble = https://github.com/h2zero/NimBLE-Arduino.git#1.2.0
+ble = https://github.com/h2zero/NimBLE-Arduino.git#1.3.3
 IotWebConf = https://github.com/prampec/IotWebConf.git
 pubsubclient = PubSubClient@2.8
 
@@ -29,6 +29,7 @@ build_flags =
 platform = ${com.esp32_platform}
 framework = arduino
 board = wemos_d1_mini32
+board_build.partitions = min_spiffs.csv
 build_flags =
   ${env.build_flags}
   '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, Main, BTProvider)'
