Initial m5stack atom (esp32 pico) support

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,23 +20,37 @@ IotWebConf = https://github.com/prampec/IotWebConf.git
 pubsubclient = PubSubClient@2.8
 
 [env]
+framework = arduino
 lib_ldf_mode = chain
 build_flags =
   -include user_include.h
   '-DSTFBUFFER_0=STF_BUFFER1(systemBuffer, 32, Main, SystemProvider)'
 
+[env:esp32-m5atom]
+platform = ${com.esp32_platform}
+board = pico32
+board_build.partitions = min_spiffs.csv
+lib_deps =
+  ${libraries.ble}
+  ${libraries.IotWebConf}
+  ${libraries.pubsubclient}
+build_flags =
+  ${env.build_flags}
+  '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, Main, BTProvider)'
+monitor_speed = 115200
+upload_speed = 115200
+
 [env:wemos_d1_mini32]
 platform = ${com.esp32_platform}
-framework = arduino
 board = wemos_d1_mini32
 board_build.partitions = min_spiffs.csv
+lib_deps =
+  ${libraries.ble}
+  ${libraries.IotWebConf}
+  ${libraries.pubsubclient}
 build_flags =
   ${env.build_flags}
   '-DSTFBUFFER_1=STF_BUFFER1(btBuffer, 64, Main, BTProvider)'
 monitor_speed = 115200
 upload_speed = 345600
 
-lib_deps =
-  ${libraries.ble}
-  ${libraries.IotWebConf}
-  ${libraries.pubsubclient}  
